[package]
name = "tsm"
version = "0.1.0"
edition = "2021"
authors = ["Harshal Jadhav <bestt1315@gmail.com>"]
description = "tsm(tmux session manager) is a cli tool to switch and create tmux sessions"
homepage = "https://github.com/halshar/tsm"
repository = "https://github.com/halshar/tsm"
readme = "README.md"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skim = "0.10.4"
